# ------------------------------------------------------------------------
#
#                             CMakeLists.txt for vector_field
#                                        V 0.01
#
#                            (c) Brian Lynch October, 2015
#
# ------------------------------------------------------------------------
cmake_minimum_required (VERSION 2.8)

project(vector_field)

add_subdirectory(src)